--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Hello World
+name: Deploy with Artifacts
 
 on:
   push:
@@ -6,47 +6,75 @@ on:
   workflow_dispatch:
 
 env:
-  TF_VERSION: 1.5.0
-  HELM_VERSION: 3.12.0
+  HELM_VERSION: "3.12.0"
+  REPO_URL: "https://raw.githubusercontent.com/${{ github.repository_owner }}/${{ github.event.repository.name }}/gh-pages"
 
 jobs:
-  validate-docker-desktop:
+  package:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      
+      - uses: actions/checkout@v4
+
+      # Helm setup using GITHUB_TOKEN automatically
       - name: Set up Helm
         uses: azure/setup-helm@v3
         with:
           version: ${{ env.HELM_VERSION }}
-          
-      - name: Validate Chart
+
+      # Package chart using dynamic repository info
+      - name: Package Helm Chart
         run: |
-          helm template ./charts/hello-world | kubectl apply --dry-run=server -f -
-          
-  deploy-prod:
-    needs: validate-docker-desktop
-    if: github.ref == 'refs/heads/main'
+          mkdir -p ./artifacts
+          helm package ./charts/hello-world -d ./artifacts
+          helm repo index ./artifacts --url ${{ env.REPO_URL }}
+
+      # Upload artifacts using GitHub's built-in token
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: helm-charts
+          path: ./artifacts/*
+
+  deploy:
+    needs: package
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v2
+      - name: Set up Helm
+        uses: azure/setup-helm@v3
         with:
-          terraform_version: ${{ env.TF_VERSION }}
+          version: ${{ env.HELM_VERSION }}
 
-      - name: Terraform Init
-        working-directory: infra
-        run: terraform init
-
+      # For cloud deployments - uses repo secrets
       - name: Terraform Apply
+        if: ${{ secrets.DO_TOKEN }}
         working-directory: infra
         run: terraform apply -auto-approve
         env:
           TF_VAR_do_token: ${{ secrets.DO_TOKEN }}
 
-      - name: Install Helm Chart
+      # For local testing
+      - name: Local Kube Setup
+        if: ${{ !secrets.DO_TOKEN }}
+        run: |
+          minikube start
+          kubectl cluster-info
+
+      - name: Install Chart
         run: |
           helm upgrade --install hello-world ./charts/hello-world \
-            --kubeconfig <(echo "${{ secrets.KUBE_CONFIG }}")
+            --set redis.auth.password=${{ secrets.REDIS_PASSWORD || 'defaultpass' }} \
+            --kubeconfig ${{ secrets.KUBE_CONFIG || '$HOME/.kube/config' }}
+  test:
+    needs: package
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Install Helm
+        uses: azure/setup-helm@v3
+        
+      - name: Run Tests
+        run: |
+          helm test hello-world --namespace default
