--- a/charts/hello-world/values.yaml
+++ b/charts/hello-world/values.yaml
@@ -54,6 +54,12 @@ service:
   # This sets the ports more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#field-spec-ports
   port: 80
 
+redis:
+  enabled: true
+  architecture: standalone
+  auth:
+    enabled: false
+
 # This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
 ingress:
   enabled: false
